# ascii-maze-benchmark

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
src/ascii_maze_benchmark/: __init__.py  benchmark_runner.py  generate_maze_script.py  interactive_cli.py  maze.py  visualization.py
tests/: test_maze.py
